[package]
name = "rust-my"
version = "0.1.0"
authors = ["Igor Kostromin <elwood@yandex-team.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bitflags = "1.2.1"
sha-1 = "0.9.2"
config = "0.10.1"
linked-hash-map = "0.5.4"
hex = "0.4.3"
num-traits = "0.2"
num-derive = "0.3"
